--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-minimal",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "Start building complex react-redux apps today, with this minimalist easy to understand starter kit (boilerplate)",
   "keywords": [
     "react",
@@ -10,10 +10,9 @@
     "boilerplate"
   ],
   "main": "index.js",
-  "homepage": "http://redux-minimal.js.org/",
   "repository": {
     "type": "git",
-    "url": "https://github.com/catalin-luntraru/redux-minimal"
+    "url": "https://github.com/opstalent/React-Redux-Startekit"
   },
   "scripts": {
     "start": "webpack-dev-server --inline --hot --history-api-fallback --host localhost --port 3000",
@@ -33,7 +32,7 @@
   "license": "MIT",
   "dependencies": {
     "react": "^15.4.2",
-    "react-bootstrap": "^0.30.7",
+    "react-bootstrap": "^0.30.10",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.1",
@@ -54,6 +53,7 @@
     "clean-webpack-plugin": "^0.1.15",
     "css-loader": "^0.26.1",
     "enzyme": "^2.7.0",
+    "eslint": "^4.8.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "ignore-styles": "^5.0.1",
     "mocha": "^3.2.0",
