--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "redux-minimal",
+  "name": "OpsTalent React-Redux starter",
   "version": "0.0.1",
   "description": "Start building complex react-redux apps today, with this minimalist easy to understand starter kit (boilerplate)",
   "keywords": [
@@ -28,7 +28,7 @@
       "stage-3"
     ]
   },
-  "author": "Catalin Luntraru",
+  "author": "OpsTalent",
   "license": "MIT",
   "dependencies": {
     "react": "^15.4.2",
@@ -54,12 +54,14 @@
     "css-loader": "^0.26.1",
     "enzyme": "^2.7.0",
     "eslint": "^4.8.0",
+    "eslint-loader": "^1.9.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "ignore-styles": "^5.0.1",
     "mocha": "^3.2.0",
     "node-sass": "^4.3.0",
     "react-addons-test-utils": "^15.4.2",
     "react-hot-loader": "^1.3.1",
+    "react-router-dom": "^4.2.2",
     "redux-freeze": "^0.1.5",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
