--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "url": "https://github.com/opstalent/React-Redux-Startekit"
   },
   "scripts": {
-    "start": "webpack-dev-server --inline --hot --history-api-fallback --host localhost --port 3000",
+    "start": "webpack-dev-server --inline --hot --history-api-fallback --host localhost --port 8080",
     "build-dev": "webpack --config webpack.dev.config.js",
     "build-prod": "webpack -p --config webpack.prod.config.js",
     "test": "mocha --recursive --compilers js:babel-register --require babel-polyfill --require ignore-styles",
@@ -60,6 +60,7 @@
     "node-sass": "^4.3.0",
     "react-addons-test-utils": "^15.4.2",
     "react-hot-loader": "^1.3.1",
+    "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "redux-freeze": "^0.1.5",
     "sass-loader": "^4.1.1",
