--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
     "css-loader": "^0.26.1",
     "enzyme": "^2.7.0",
     "eslint": "^4.8.0",
+    "eslint-config-google": "^0.9.1",
     "eslint-loader": "^1.9.0",
+    "eslint-plugin-react": "^7.4.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "ignore-styles": "^5.0.1",
     "mocha": "^3.2.0",
