--- a/package.json
+++ b/package.json
@@ -19,7 +19,18 @@
     "build-dev": "webpack --config webpack.dev.config.js",
     "build-prod": "webpack -p --config webpack.prod.config.js",
     "test": "mocha --recursive --compilers js:babel-register --require babel-polyfill --require ignore-styles",
-    "test-watch": "npm test -- --watch"
+    "test-watch": "npm test -- --watch",
+    "precommit": "npm run lint",
+    "lint": "npm run lint:js",
+    "lint:eslint": "eslint --ignore-path .gitignore --ignore-pattern internals/scripts",
+    "lint:js": "npm run lint:eslint -- . ",
+    "lint:fix": "eslint --fix --ignore-path .gitignore --ignore-pattern internals/scripts -- .",
+    "lint:staged": "lint-staged",
+    "clean:all": "npm run analyze:clean && npm run test:clean && npm run build:clean",
+    "prebuild": "npm run build:clean"
+  },
+  "lint-staged": {
+    "*.js": "lint:eslint"
   },
   "babel": {
     "presets": [
@@ -41,6 +52,10 @@
     "redux-form": "^7.0.4",
     "redux-saga": "^0.14.3"
   },
+  "pre-commit": [
+    "precommit-msg",
+    "lint"
+  ],
   "devDependencies": {
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
@@ -60,6 +75,7 @@
     "ignore-styles": "^5.0.1",
     "mocha": "^3.2.0",
     "node-sass": "^4.3.0",
+    "pre-commit": "^1.2.2",
     "react-addons-test-utils": "^15.4.2",
     "react-hot-loader": "^1.3.1",
     "react-router": "^4.2.0",
