--- a/package.json
+++ b/package.json
@@ -15,18 +15,15 @@
     "url": "https://github.com/opstalent/React-Redux-Startekit"
   },
   "scripts": {
-    "start": "webpack-dev-server --inline --hot --history-api-fallback --host localhost --port 8080",
-    "build-dev": "webpack --config webpack.dev.config.js",
-    "build-prod": "webpack -p --config webpack.prod.config.js",
-    "test": "mocha --recursive --compilers js:babel-register --require babel-polyfill --require ignore-styles",
-    "test-watch": "npm test -- --watch",
+    "start": "webpack-dev-server --config webpack.dev.config.js --history-api-fallback --host localhost --port 8080",
+    "build": "webpack -p --config webpack.prod.config.js",
+    "test": "jest ./test",
+    "test:watch": "npm test -- --watch",
     "lint": "npm run lint:js",
     "lint:eslint": "eslint --ignore-path .gitignore --ignore-pattern internals/scripts",
     "lint:js": "npm run lint:eslint -- . ",
     "lint:fix": "eslint --fix --ignore-path .gitignore --ignore-pattern internals/scripts -- .",
     "lint:staged": "lint-staged",
-    "clean:all": "npm run analyze:clean && npm run test:clean && npm run build:clean",
-    "prebuild": "npm run build:clean"
   },
   "lint-staged": {
     "*.js": "lint:eslint"
@@ -53,32 +50,34 @@
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
-    "babel-loader": "^6.2.10",
+    "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.20.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-3": "^6.17.0",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "^6.20.0",
     "clean-webpack-plugin": "^0.1.15",
     "css-loader": "^0.26.1",
+    "ejs": "^2.5.7",
     "enzyme": "^2.7.0",
     "eslint": "^4.8.0",
     "eslint-config-google": "^0.9.1",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-react": "^7.4.0",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^3.0.1",
+    "html-webpack-plugin": "^2.30.1",
     "ignore-styles": "^5.0.1",
-    "mocha": "^3.2.0",
+    "jest": "^21.2.1",
     "node-sass": "^4.3.0",
     "react-addons-test-utils": "^15.4.2",
-    "react-hot-loader": "^1.3.1",
+    "react-hot-loader": "^3.0.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "redux-freeze": "^0.1.5",
-    "sass-loader": "^4.1.1",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.13.1",
-    "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.16.2",
+    "webpack": "^3.7.1",
+    "webpack-dev-server": "^2.9.2",
     "whatwg-fetch": "^2.0.1"
   }
 }
