--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lint:eslint": "eslint --ignore-path .gitignore --ignore-pattern internals/scripts",
     "lint:js": "npm run lint:eslint -- . ",
     "lint:fix": "eslint --fix --ignore-path .gitignore --ignore-pattern internals/scripts -- .",
-    "lint:staged": "lint-staged",
+    "lint:staged": "lint-staged"
   },
   "lint-staged": {
     "*.js": "lint:eslint"
