--- a/package.json
+++ b/package.json
@@ -78,7 +78,6 @@
     "style-loader": "^0.13.1",
     "webpack": "^3.7.1",
     "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.2",
-    "whatwg-fetch": "^2.0.1"
+    "webpack-dev-server": "^2.9.2"
   }
 }
