--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
     "redux-form": "^7.0.4",
-    "redux-saga": "^0.14.3"
+    "redux-saga": "^0.14.3",
+    "semantic-ui-react": "^0.76.0"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
@@ -76,6 +77,7 @@
     "redux-freeze": "^0.1.5",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.6.2",
     "webpack": "^3.7.1",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.2"
