--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.10",
     "react-dom": "^15.4.2",
+    "react-icons": "^2.2.7",
     "react-redux": "^5.0.2",
     "react-router-bootstrap": "^0.23.1",
     "react-router-redux": "^4.0.7",
