--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "author": "OpsTalent",
   "license": "MIT",
   "dependencies": {
+    "material-ui": "^0.19.4",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.10",
     "react-dom": "^15.4.2",
